--- a/admin/index.html
+++ b/admin/index.html
@@ -6,15 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta class="author" content="Ritik Raj">
   <title>sign-in page</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sign-in/">
+
 
 </head>
 
 <body>
 
-  <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="BootStrapCss/bootstrap.min.css" rel="stylesheet">
 
   <style>
     .bd-placeholder-img {
@@ -34,14 +32,14 @@
 
 
   <!-- Custom styles for this Login Page -->
-  <link href="signin.css" rel="stylesheet">
+  <link href="BootStrapCss/index.css" rel="stylesheet">
   </head>
 
   <body class="text-center">
 
     <main class="form-signin">
       <form>
-        <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+        <img class="mb-4" src="Enter A Logo" alt="" width="72" height="57">
         <h1 class="h3 mb-3 fw-normal">Log In</h1>
 
         <div class="form-floating">
@@ -63,11 +61,6 @@
       </form>
     </main>
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"></script>
   </body>
 
 </html>
