--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 
+<!--Head startes here-->
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -56,6 +58,8 @@
     <!--Navigation Bar Ended-->
 
 </head>
+
+<!--Head ends here-->
 
 <body>
     <h1>Landing Page</h1>
